# vvdec-rs

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
gst-plugin-vvdec/: Cargo.toml
gst-plugin-vvdec/src/: lib.rs
gst-plugin-vvdec/src/dec/: imp.rs
gst-plugin-vvdec/src/vvdec_element/: imp.rs  mod.rs
src/: lib.rs
tests/: basic.rs  short.vvc  short2.vvc
vvdec-sys/: Cargo.toml  build.rs  wrapper.h
vvdecli/: Cargo.toml
vvdecli/src/: chunked_reader.rs  main.rs
vvdecli/tests/: basic.rs
