[package]
name = "vvdec"
version = "0.3.1"
edition = "2021"
authors = ["Carlos Bentzen <cadubentzen@gmail.com>"]
description = "Rust bindings for VVdeC"
license = "BSD-3-Clause-Clear"
repository = "https://github.com/cadubentzen/vvdec-rs"
exclude = ["tests/", ".devcontainer/", ".github/"]

[dependencies]
thiserror = "1"
vvdec-sys = { path = "./vvdec-sys", version = "0.3.4" }

[workspace]
members = ["vvdec-sys", "vvdecli"]
