[workspace]
members = ["vvdec-sys", "vvdecli"]

[workspace.package]
rust-version = "1.80"
edition = "2021"
repository = "https://github.com/cadubentzen/vvdec-rs"
authors = ["Carlos Bentzen <cadubentzen@igalia.com>"]
license = "BSD-3-Clause-Clear"

[package]
name = "vvdec"
version = "0.6.9"
authors.workspace = true
description = "Rust bindings for VVdeC"
license.workspace = true
exclude = ["tests/", ".devcontainer/", ".github/"]
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2"
vvdec-sys = { path = "./vvdec-sys", version = "0.7.0" }

[features]
docsrs = ["vvdec-sys/docsrs"]

[package.metadata.docs.rs]
features = ["docsrs"]
