[package]
name = "vvdec-sys"
version = "0.5.0"
links = "vvdec"
authors.workspace = true
description = "Rust unsafe bindings for VVdeC"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[build-dependencies]
bindgen = "0.71"
pkg-config = "0.3"
cmake = { version = "0.1", optional = true }

[features]
vendored = ["dep:cmake"]

[package.metadata.docs.rs]
features = ["vendored"]
