[package]
name = "vvdec-sys"
version = "0.5.2"
links = "vvdec"
authors.workspace = true
description = "Rust unsafe bindings for VVdeC"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
system-deps = "7"

[package.metadata.system-deps]
libvvdec = "3.0"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
