[package]
name = "vvdec-sys"
version = "0.6.0"
links = "vvdec"
authors.workspace = true
description = "Rust unsafe bindings for VVdeC"
license.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
system-deps = "7"

[package.metadata.system-deps]
libvvdec = "3.0"

[features]
docsrs = []

[package.metadata.docs.rs]
features = ["docsrs"]
