[package]
name = "vvdecli"
version = "0.6.5"
edition.workspace = true
authors.workspace = true
description = "CLI application for decoding VVC bitstreams"
license.workspace = true
repository.workspace = true
exclude = ["tests/"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
vvdec = { path = "..", version = "0.6.6" }
y4m = "0.8"

[dev-dependencies]
assert_cmd = "2"

[features]
docsrs = ["vvdec/docsrs"]

[package.metadata.docs.rs]
features = ["docsrs"]
